--- a/styles/style.css
+++ b/styles/style.css
@@ -25,12 +25,19 @@
     transform: translateY(-100%);
 }
 
+
 .rodape{
     text-align: center;
     background-color: rgba(36, 34, 133, 0.829);
     position:absolute;
     bottom:0;
     width:100%;
+  }
+
+  #intensityControl{
+    position: relative;
+    top:81.5%;
+    opacity: 0%;
   }
   
 
