Volume antes de ser mutado agora ee recuperavel, ao terminar o video a funcao stopped tbm ee evocada

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,13 @@
+body{
+   background-color:rgba(19, 17, 128, 0.678);
+}
+
 .container{
     position:relative;
     width: 640px;
     height:360px;
     text-align: center;
+    margin: auto;
 }
 
 .video{
